# Spade

./: .dockerignore  .gitignore  Dockerfile  README.md  environment.yml  generate_conformer_group_notebook.py  pyproject.toml
.github/workflows/: ci.yml  docker.yml  publish.yml
notebooks/: ABL1_4way_experiment.ipynb  ABL1_ConditionD_GroupAnalysis.ipynb  Classical_Comparison.ipynb  GPU_Benchmarking.ipynb  SPADE_Benchmark.ipynb  SPADE_demo.ipynb
scripts/: build_dunbrack.py
spade/: __init__.py
spade/core/: clustering.py  docking.py  domain_rearrangement.py  ensemble.py  flexibility.py  ligand.py  repacker.py  report.py  structure.py
spade/data/: dunbrack_rotamers.pkl
spade/interfaces/: cli.py  tui.py
spade/templates/: report.html.j2
tests/: test_cli.py  test_clustering.py  test_docking.py  test_ensemble.py  test_flexibility.py  test_integration.py  test_ligand.py  test_repacker.py  test_structure.py
tests/fixtures/: egfr_kinase_pae.json  egfr_kinase_pae_v2.json  erlotinib.smi
