[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spade-docking"
version = "0.1.0"
description = "Structural PAE-Aware Docking Ensembles — AlphaFold-aware ensemble molecular docking with uncertainty quantification"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "ChandraguptSharma07" },
]
keywords = ["docking", "alphafold", "molecular-dynamics", "drug-discovery", "bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "prody>=2.4",
    "biotite>=0.37",
    "requests>=2.28",
    "rdkit>=2023.3",
    "meeko>=0.5",
    "dimorphite-dl>=1.3",
    "vina>=1.2",
    "prolif>=2.0",
    "scikit-learn>=1.3",
    "numba>=0.58",
    "typer>=0.9",
    "rich>=13.0",
    "questionary>=2.0",
    "jinja2>=3.1",
    "py3dmol>=2.0",
]

[project.optional-dependencies]
enhanced = ["pdbfixer>=1.9"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
spade = "spade.interfaces.cli:app"

[project.urls]
Repository = "https://github.com/ChandraguptSharma07/Spade"

[tool.hatch.build.targets.wheel]
packages = ["spade"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
